--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
         <div class="hero">
-            <div id="header-menu">
+            <div id="header-menu" class="bg-nav-trans">
                 <div class="container">
                     <nav class="navbar navbar-expand-md navbar-light bg-transparent">
                         <a class="navbar-brand" href="#">
